--- a/ESTILOS.CSS
+++ b/ESTILOS.CSS
@@ -41,7 +41,7 @@ label {
     margin-bottom: 0.5rem;
     font-stretch: extra-condensed	;
     color: #0a0a0a;
-    text-align:
+    text-align:left
 }
 
 button {
