--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,46 +1,18 @@
+// sass/base/_base.scss
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%; // 1rem = 10px
-}
+@use '../abstracts/variaveis' as var;
 
 body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    font-size: 1.6rem;
-    color: #333;
-    background-color: #fff;
+    font-family: var.$font-stack;
+    margin: 0;
+    padding: 0;
+    // Cor de fundo original mantida
+    background-color: hwb(0 6% 73% / 0.171); 
+    color: var.$color-text-body;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-ul, ol {
-    list-style: none;
-}
-
-button {
-    border: none;
-    background: none;
-    cursor: pointer;
-}
-
-// Common utility classes
-.container {
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: 0 2rem;
+ul {
+    list-style-type: none;
+    padding: 8px;
+    margin: 10px;
 }
